--- a/templates/core/full_header.mustache
+++ b/templates/core/full_header.mustache
@@ -55,7 +55,7 @@
 
                 {{#hasnavbar}}
                     <div class="header-navigation">
-                        <nav aria-label="{{#str}}breadcrumb{{/str}}">
+                        <nav aria-label="{{#str}}breadcrumb, theme_compecer{{/str}}">
                             {{{navbar}}}
                         </nav>
                     </div>
@@ -90,7 +90,7 @@
         {{/welcomemessage}}
         {{#hasnavbar}}
             <div class="header-navigation">
-                <nav aria-label="{{#str}}breadcrumb{{/str}}">
+                <nav aria-label="{{#str}}breadcrumb, theme_compecer{{/str}}">
                     {{{navbar}}}
                 </nav>
             </div>
