--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -71,7 +71,7 @@
             {{#enabledashboardcards}}
             <!-- Dashboard Cards Section -->
             {{#hasdashboardcards}}
-            <div class="container dashboard-cards-section my-4">
+            <div class="container-fluid dashboard-cards-section my-4">
                 <div class="row">
                     {{#dashboardcards}}
                     <div class="col-sm-6 col-md-6 col-lg-6 col-xl-3">
