--- a/templates/mydashboard.mustache
+++ b/templates/mydashboard.mustache
@@ -1,16 +1,13 @@
 {{!
     This file is part of Moodle - http://moodle.org/
-
     Moodle is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
-
     Moodle is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
-
     You should have received a copy of the GNU General Public License
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
@@ -28,138 +25,151 @@
     <div id="page-wrapper" class="d-print-block">
         {{{ output.standard_top_of_body_html }}}
         {{> theme_moove/navbar }}
-        
-        {{#courseindex}}
-            {{< theme_boost/drawer }}
-                {{$id}}theme_boost-drawers-courseindex{{/id}}
-                {{$drawerheadercontent}}
-                    {{> theme_boost/courseindexdrawercontrols}}
-                {{/drawerheadercontent}}
-                {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
-                {{$drawercontent}}
-                    {{{ courseindex }}}
-                {{/drawercontent}}
-                {{$drawerpreferencename}}drawer-open-index{{/drawerpreferencename}}
-                {{$drawerstate}}show-drawer-left{{/drawerstate}}
-                {{$tooltipplacement}}right{{/tooltipplacement}}
-                {{$closebuttontext}}{{#str}}closecourseindex, core{{/str}}{{/closebuttontext}}
-            {{/ theme_boost/drawer}}
-        {{/courseindex}}
-        
-        {{#hasblocks}}
-            {{< theme_boost/drawer }}
-                {{$id}}theme_boost-drawers-blocks{{/id}}
-                {{$drawerclasses}}drawer drawer-right{{#blockdraweropen}} show{{/blockdraweropen}}{{/drawerclasses}}
-                {{$drawercontent}}
-                    <section class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
-                        {{{ addblockbutton }}}
-                        {{{ sidepreblocks }}}
-                    </section>
-                {{/drawercontent}}
-                {{$drawerpreferencename}}drawer-open-block{{/drawerpreferencename}}
-                {{$forceopen}}{{#forceblockdraweropen}}1{{/forceblockdraweropen}}{{/forceopen}}
-                {{$drawerstate}}show-drawer-right{{/drawerstate}}
-                {{$tooltipplacement}}left{{/tooltipplacement}}
-                {{$drawercloseonresize}}1{{/drawercloseonresize}}
-                {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
-            {{/ theme_boost/drawer}}
-        {{/hasblocks}}
+        {{! Include the dashboard sidebar partial }}
+        {{> theme_compecer/partials/dashboard_sidebar }}
         
         <div id="page" data-region="mainpage" data-usertour="scroller" class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
-            {{{ output.full_header }}}
             
-            {{#enabledashboardcards}}
-            <!-- Dashboard Cards Section -->
-            {{#hasdashboardcards}}
-            <div class="container-fluid dashboard-cards-section my-4">
-                <div class="row">
-                    {{#dashboardcards}}
-                    <div class="col-sm-6 col-md-6 col-lg-6 col-xl-3">
-                        <a href="{{{ url }}}" class="ff_one">
-                            <div class="detais">
-                                <p>{{ subtitle }}</p>
-                                {{ title }}
-                            </div>
-                            <div class="ff_icon" style="background-color: {{ color }}">
-                                <span class="fas fa-{{{ iconclass }}}"></span>
-                            </div>
-                        </a>
+            <!-- Course Index Drawer (si existe contenido para él) -->
+            {{#courseindex}}
+                {{< theme_boost/drawer }}
+                    {{$id}}theme_boost-drawers-courseindex{{/id}}
+                    {{$drawerheadercontent}}
+                        {{> theme_boost/courseindexdrawercontrols}}
+                    {{/drawerheadercontent}}
+                    {{$drawerclasses}}drawer drawer-left {{#courseindexopen}}show{{/courseindexopen}}{{/drawerclasses}}
+                    {{$drawercontent}}
+                        {{{ courseindex }}}
+                    {{/drawercontent}}
+                    {{$drawerpreferencename}}drawer-open-index{{/drawerpreferencename}}
+                    {{$drawerstate}}show-drawer-left{{/drawerstate}}
+                    {{$tooltipplacement}}right{{/tooltipplacement}}
+                    {{$closebuttontext}}{{#str}}closecourseindex, core{{/str}}{{/closebuttontext}}
+                {{/ theme_boost/drawer }}
+            {{/courseindex}}
+            
+            <!-- Blocks Drawer (si hay bloques) -->
+            {{#hasblocks}}
+                {{< theme_boost/drawer }}
+                    {{$id}}theme_boost-drawers-blocks{{/id}}
+                    {{$drawerclasses}}drawer drawer-right{{#blockdraweropen}} show{{/blockdraweropen}}{{/drawerclasses}}
+                    {{$drawercontent}}
+                        <section class="d-print-none" aria-label="{{#str}}blocks{{/str}}">
+                            {{{ addblockbutton }}}
+                            {{{ sidepreblocks }}}
+                        </section>
+                    {{/drawercontent}}
+                    {{$drawerpreferencename}}drawer-open-block{{/drawerpreferencename}}
+                    {{$forceopen}}{{#forceblockdraweropen}}1{{/forceblockdraweropen}}{{/forceopen}}
+                    {{$drawerstate}}show-drawer-right{{/drawerstate}}
+                    {{$tooltipplacement}}left{{/tooltipplacement}}
+                    {{$drawercloseonresize}}1{{/drawercloseonresize}}
+                    {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
+                {{/ theme_boost/drawer }}
+            {{/hasblocks}}
+            
+            <!-- Main Content Area -->
+            <div id="dashboard-main" class="main-content">
+                {{{ output.full_header }}}
+                
+                {{#enabledashboardcards}}
+                {{#hasdashboardcards}}
+                <!-- Dashboard Cards Section -->
+                <div class="container-fluid dashboard-cards-section my-4">
+                    <div class="row">
+                        {{#dashboardcards}}
+                        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-3">
+                            <a href="{{{ url }}}" class="ff_one">
+                                <div class="detais">
+                                    <p>{{ subtitle }}</p>
+                                    {{ title }}
+                                </div>
+                                <div class="ff_icon" style="background-color: {{ color }}">
+                                    <span class="fas fa-{{{ iconclass }}}"></span>
+                                </div>
+                            </a>
+                        </div>
+                        {{/dashboardcards}}
                     </div>
-                    {{/dashboardcards}}
                 </div>
-            </div>
-            {{/hasdashboardcards}}
-            {{/enabledashboardcards}}
-            
-            <div id="topofscroll" class="main-inner">
-                <div class="drawer-toggles d-flex">
-                    {{#courseindex}}
-                        <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
-                            <button class="btn icon-no-margin"
-                                data-toggler="drawers"
-                                data-action="toggle"
-                                data-target="theme_boost-drawers-courseindex"
-                                data-toggle="tooltip"
-                                data-placement="right"
-                                title="{{#str}}opendrawerindex, core{{/str}}">
-                                <span class="sr-only">{{#str}}opendrawerindex, core{{/str}}</span>
-                                {{#pix}} t/index_drawer, moodle {{/pix}}
-                            </button>
+                {{/hasdashboardcards}}
+                {{/enabledashboardcards}}
+    
+                <div id="topofscroll" class="main-inner">
+                    <div class="drawer-toggles d-flex">
+                        {{#courseindex}}
+                            <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
+                                <button
+                                    class="btn icon-no-margin"
+                                    data-toggler="drawers"
+                                    data-action="toggle"
+                                    data-target="theme_boost-drawers-courseindex"
+                                    data-toggle="tooltip"
+                                    data-placement="right"
+                                    title="{{#str}}opendrawerindex, core{{/str}}"
+                                >
+                                    <span class="sr-only">{{#str}}opendrawerindex, core{{/str}}</span>
+                                    {{#pix}} t/index_drawer, moodle {{/pix}}
+                                </button>
+                            </div>
+                        {{/courseindex}}
+                        {{#hasblocks}}
+                            <div class="drawer-toggler drawer-right-toggle ml-auto d-print-none">
+                                <button
+                                    class="btn icon-no-margin"
+                                    data-toggler="drawers"
+                                    data-action="toggle"
+                                    data-target="theme_boost-drawers-blocks"
+                                    data-toggle="tooltip"
+                                    data-placement="right"
+                                    title="{{#str}}opendrawerblocks, core{{/str}}"
+                                >
+                                    <span class="sr-only">{{#str}}opendrawerblocks, core{{/str}}</span>
+                                    <span class="dir-rtl-hide">{{#pix}}t/blocks_drawer, core{{/pix}}</span>
+                                    <span class="dir-ltr-hide">{{#pix}}t/blocks_drawer_rtl, core{{/pix}}</span>
+                                </button>
+                            </div>
+                        {{/hasblocks}}
+                    </div>
+    
+                    <div id="page-content" class="d-print-block">
+                        <div id="region-main-box">
+                            {{#hasregionmainsettingsmenu}}
+                                <div id="region-main-settings-menu" class="d-print-none">
+                                    <div> {{{ regionmainsettingsmenu }}} </div>
+                                </div>
+                            {{/hasregionmainsettingsmenu}}
+                            <section id="region-main" aria-label="{{#str}}content{{/str}}">
+                                {{#hasregionmainsettingsmenu}}
+                                    <div class="region_main_settings_menu_proxy"></div>
+                                {{/hasregionmainsettingsmenu}}
+                                {{{ output.course_content_header }}}
+                                {{#headercontent}}
+                                    {{> core/activity_header }}
+                                {{/headercontent}}
+                                {{#overflow}}
+                                    <div class="container-fluid tertiary-navigation">
+                                        <div class="navitem">
+                                            {{> core/url_select}}
+                                        </div>
+                                    </div>
+                                {{/overflow}}
+                                {{{ output.main_content }}}
+                                {{{ output.activity_navigation }}}
+                                {{{ output.course_content_footer }}}
+                            </section>
                         </div>
-                    {{/courseindex}}
-                    {{#hasblocks}}
-                        <div class="drawer-toggler drawer-right-toggle ml-auto d-print-none">
-                            <button class="btn icon-no-margin"
-                                data-toggler="drawers"
-                                data-action="toggle"
-                                data-target="theme_boost-drawers-blocks"
-                                data-toggle="tooltip"
-                                data-placement="right"
-                                title="{{#str}}opendrawerblocks, core{{/str}}">
-                                <span class="sr-only">{{#str}}opendrawerblocks, core{{/str}}</span>
-                                <span class="dir-rtl-hide">{{#pix}}t/blocks_drawer, core{{/pix}}</span>
-                                <span class="dir-ltr-hide">{{#pix}}t/blocks_drawer_rtl, core{{/pix}}</span>
-                            </button>
-                        </div>
-                    {{/hasblocks}}
+                    </div>
                 </div>
                 
-                <div id="page-content" class="d-print-block">
-                    <div id="region-main-box">
-                        {{#hasregionmainsettingsmenu}}
-                        <div id="region-main-settings-menu" class="d-print-none">
-                            <div> {{{ regionmainsettingsmenu }}} </div>
-                        </div>
-                        {{/hasregionmainsettingsmenu}}
-                        <section id="region-main" aria-label="{{#str}}content{{/str}}">
-                            {{#hasregionmainsettingsmenu}}
-                                <div class="region_main_settings_menu_proxy"></div>
-                            {{/hasregionmainsettingsmenu}}
-                            {{{ output.course_content_header }}}
-                            {{#headercontent}}
-                                {{> core/activity_header }}
-                            {{/headercontent}}
-                            {{#overflow}}
-                                <div class="container-fluid tertiary-navigation">
-                                    <div class="navitem">
-                                        {{> core/url_select}}
-                                    </div>
-                                </div>
-                            {{/overflow}}
-                            {{{ output.main_content }}}
-                            {{{ output.activity_navigation }}}
-                            {{{ output.course_content_footer }}}
-                        </section>
-                    </div>
+                <!-- Footer con espaciado adecuado para que no se superponga -->
+                <div class="dashboard-footer">
+                    {{> theme_moove/footer }}
                 </div>
             </div>
-            
-            {{> theme_moove/footer }}
         </div>
         {{{ output.standard_after_main_region_html }}}
     </div>
-</div>
-
 </body>
 </html>
 
