--- a/templates/theme_moove/frontpage.mustache
+++ b/templates/theme_moove/frontpage.mustache
@@ -103,7 +103,7 @@
 
         <!-- Career Boxes Section -->
         {{#careerboxes}}
-        <section id="career-section" class="py-5 animate-section">
+        <section id="career-section" class="py-5 animate-section" style="background-color: {{careerboxesbgcolor}}">
             <div class="container">
                 <div class="row justify-content-center mb-5">
                     <div class="col-lg-8 text-center">
@@ -115,7 +115,7 @@
                 <div class="row">
                     {{#boxes}}
                     <div class="col-md-4 mb-4">
-                        <div class="career-box text-center h-100 p-4 rounded shadow-sm">
+                        <div class="career-box text-center h-100 p-4 rounded shadow-sm" style="background-color: {{careerboxesbgcolor}}">
                             <div class="icon-wrapper mb-4">
                                 <i class="fas fa-{{{icon}}} fa-3x"></i>
                             </div>
