--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -47,13 +47,13 @@
                         <div class="carousel-image-wrapper">
                             <!-- Desktop Image -->
                             <img src="{{{image}}}" 
-                                 alt="{{#str}}slideimagedesc, theme_compecer{{/str}}" 
+                                 alt="{{#str}}sliderimagedesc, theme_compecer{{/str}}" 
                                  class="carousel-image carousel-image-desktop d-none d-md-block">
                             
                             <!-- Mobile Image (solo si existe) -->
                             {{#has_mobile}}
                             <img src="{{{mobile_image}}}" 
-                                 alt="{{#str}}slideimagedesc, theme_compecer{{/str}}" 
+                                 alt="{{#str}}sliderimagedesc, theme_compecer{{/str}}" 
                                  class="carousel-image carousel-image-mobile d-block d-md-none">
                             {{/has_mobile}}
                         </div>
