--- a/scss/custom_variables.scss
+++ b/scss/custom_variables.scss
@@ -23,6 +23,7 @@ $white:          #FFFFFF;
 $black:          #000000;
 $light-bg:       #F9F9F9;   // Fondo claro para secciones o cards
 $dark-bg:        #333333;
+$yellow:         #ffb000;
 $brand-primary: $primary-red;
 
 // -----------------------------------------------------
